--- a/omo_r1mini_bringup/config/robot_config.yaml
+++ b/omo_r1mini_bringup/config/robot_config.yaml
@@ -1,9 +1,9 @@
 motor_spec:
-    gear_ratio : 213
-    wheel_base : 0.150
-    wheel_radius : 0.034 
+    gear_ratio : 250
+    wheel_base : 0.165   # 0.16 worked  # 0.17
+    wheel_radius : 0.03375
     enc_pulse : 44
 
 use_imu_during_odom_calc:
-    use_imu : False
+    use_imu : True
     complementary_filter_coef : 0.5
