--- a/omo_r1mini_navigation/param/base_local_planner_params.yaml
+++ b/omo_r1mini_navigation/param/base_local_planner_params.yaml
@@ -13,14 +13,14 @@ TrajectoryPlannerROS:
   acc_lim_theta: 0.4
 
 # Goal Tolerance Parameters
-  xy_goal_tolerance: 0.10
-  yaw_goal_tolerance: 0.05
+  xy_goal_tolerance: 0.15
+  yaw_goal_tolerance: 0.2
 
 # Differential-drive robot configuration
   holonomic_robot: false
 
 # Forward Simulation Parameters
-  sim_time: 1.0
+  sim_time: 2.0   # 2.5
   vx_samples: 18
   vtheta_samples: 20
   sim_granularity: 0.05
